objects/SPIN_Language_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_text_field__c</fullName>
        <label>Help text field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_text_field__c</fullName>
        <label>Question text field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SPIN Language Config</label>
</CustomObject>